# Elina-chat-QQ-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  pyproject.toml  介绍.md  启动小鼠.bat  启动艾琳娜.bat
nonebot_plugin_personal_companion/: __init__.py  command_router.py  config.py  content_fetcher.py  diary.py  feishu_calendar.py  flows.py  knowledge.py  llm_client.py  manifestation_quotes.py  memory.py  message_handler.py  personality.py  proactive.py  prompt_builder.py  relationship.py  reminders.py  services.py  turn_context.py  web_search.py
nonebot_plugin_personal_companion/prompts/: default.yaml  flow_steps.yaml  manifestation_knowledge.yaml  philosophy_knowledge.yaml
tests/: conftest.py  test_content_fetcher.py  test_feishu_calendar.py  test_feishu_calendar_client.py  test_flows.py  test_improvements.py  test_memory.py  test_proactive.py  test_reminders_parse.py  test_reminders_service.py  test_reminders_store.py  test_ux_eval.py
tests/evals/: ux_cases.yaml
